update class notebooks

--- a/Assignment4/course_materials/notebooks/Task04.ipynb
+++ b/Assignment4/course_materials/notebooks/Task04.ipynb
@@ -38,17 +38,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rdflib in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (6.0.1)\n",
-      "Requirement already satisfied: pyparsing in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (2.4.7)\n",
-      "Requirement already satisfied: isodate in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (0.6.0)\n",
-      "Requirement already satisfied: setuptools in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (44.1.1)\n",
-      "Requirement already satisfied: six in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from isodate->rdflib) (1.16.0)\n"
+      "Requirement already satisfied: rdflib in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (6.2.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (57.4.0)\n",
+      "Requirement already satisfied: isodate in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (0.6.1)\n",
+      "Requirement already satisfied: pyparsing in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (3.0.7)\n",
+      "Requirement already satisfied: six in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from isodate->rdflib) (1.16.0)\n"
      ]
     }
    ],
    "source": [
     "!pip install rdflib\n",
-    "github_storage = \"https://raw.githubusercontent.com/FacultadInformatica-LinkedData/Curso2021-2022/master/Assignment4/course_materials\""
+    "github_storage = \"https://raw.githubusercontent.com/FacultadInformatica-LinkedData/Curso2022-2023/master/Assignment4/course_materials\""
    ]
   },
   {
@@ -78,7 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=Nfb09f4809d3940d98c2e00a0f4426ec5 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=Ndfd28047c21a458bbddc9e2252ad5ee2 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
      "execution_count": 2,
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -149,7 +149,7 @@
     "    ?Subject vcard:FN ?FullName. \n",
     "  }\n",
     "  ''',\n",
-    "  initNs = { \"vcard\": VCARD}\n",
+    "  initNs = { \"vcard\": VCARD} # initiate namespace (initNs) VCARD as vcard in SparQL\n",
     ")\n",
     "\n",
     "\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -248,24 +248,17 @@
     "id": "sPGjq-AEcvEN",
     "outputId": "78c357de-ebc7-4195-af6c-0cf2b0bcffa5"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://somewhere#JaneSmith\n",
-      "http://somewhere#JohnSmith\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rdflib import XSD\n",
     "\n",
     "q3 = prepareQuery('''\n",
     "  SELECT ?Subject WHERE { \n",
     "    ?Subject vcard:Family ?Family.\n",
+    "    FILTER regex(?family, \"smith\", \"i\")\n",
     "  } \n",
     "  ''',\n",
+    "                \n",
     "  initNs = { \"vcard\": VCARD}\n",
     ")\n",
     "\n",
@@ -285,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -343,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -419,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
