--- a/Assignment4/course_materials/notebooks/Task01.ipynb
+++ b/Assignment4/course_materials/notebooks/Task01.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -48,22 +48,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rdflib in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (6.0.1)\r\n",
-      "Requirement already satisfied: pyparsing in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (2.4.7)\r\n",
-      "Requirement already satisfied: isodate in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (0.6.0)\r\n",
-      "Requirement already satisfied: setuptools in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (44.1.1)\r\n",
-      "Requirement already satisfied: six in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from isodate->rdflib) (1.16.0)\r\n"
+      "Requirement already satisfied: rdflib in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (6.2.0)\n",
+      "Requirement already satisfied: isodate in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (0.6.1)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (57.4.0)\n",
+      "Requirement already satisfied: pyparsing in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (3.0.7)\n",
+      "Requirement already satisfied: six in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from isodate->rdflib) (1.16.0)\n"
      ]
     }
    ],
    "source": [
     "!pip install rdflib\n",
-    "github_storage = \"https://raw.githubusercontent.com/FacultadInformatica-LinkedData/Curso2021-2022/master/Assignment4/course_materials\""
+    "github_storage = \"https://raw.githubusercontent.com/FacultadInformatica-LinkedData/Curso2022-2023/master/Assignment4/course_materials\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -123,10 +123,10 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=Ncac33e4065db4a1a9d6ab4051394180f (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=Nd533b85ad4bc40cc8eefbf698aa325ff (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,17 +222,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "http://somewhere/JohnSmith http://www.w3.org/2001/vcard-rdf/3.0#Family Smith\n",
+      "http://somewhere/JohnSmith http://www.w3.org/2001/vcard-rdf/3.0#FN John Smith\n",
+      "http://somewhere/JohnSmith http://www.w3.org/2001/vcard-rdf/3.0#Given John\n",
       "http://somewhere/SarahJones http://xmlns.com/foaf/0.1/email sJones@somewhere.com\n",
       "http://somewhere/SarahJones http://www.w3.org/2001/vcard-rdf/3.0#Given Sarah\n",
-      "http://somewhere/MattJones http://www.w3.org/2001/vcard-rdf/3.0#Given Matt\n",
-      "http://somewhere/JohnSmith http://www.w3.org/2001/vcard-rdf/3.0#Given John\n",
-      "http://somewhere/SarahJones http://www.w3.org/2001/vcard-rdf/3.0#FN Sarah Jones\n",
-      "http://somewhere/MattJones http://www.w3.org/2001/vcard-rdf/3.0#FN Matt Jones\n",
-      "http://somewhere/MattJones http://www.w3.org/2001/vcard-rdf/3.0#Family Jones\n",
-      "http://somewhere/MattJones http://xmlns.com/foaf/0.1/knows http://somewhere/JaneSmith\n",
       "http://somewhere/SarahJones http://www.w3.org/2001/vcard-rdf/3.0#Family Jones\n",
-      "http://somewhere/JohnSmith http://www.w3.org/2001/vcard-rdf/3.0#FN John Smith\n",
-      "http://somewhere/JohnSmith http://www.w3.org/2001/vcard-rdf/3.0#Family Smith\n"
+      "http://somewhere/SarahJones http://www.w3.org/2001/vcard-rdf/3.0#FN Sarah Jones\n"
      ]
     }
    ],
@@ -272,11 +268,6 @@
       "    vcard:Family \"Smith\"^^xsd:string ;\n",
       "    vcard:Given \"John\"^^xsd:string .\n",
       "\n",
-      "<http://somewhere/MattJones> vcard:FN \"Matt Jones\"^^xsd:string ;\n",
-      "    vcard:Family \"Jones\"^^xsd:string ;\n",
-      "    vcard:Given \"Matt\"^^xsd:string ;\n",
-      "    foaf:knows <http://somewhere/JaneSmith> .\n",
-      "\n",
       "<http://somewhere/SarahJones> vcard:FN \"Sarah Jones\"^^xsd:string ;\n",
       "    vcard:Family \"Jones\"^^xsd:string ;\n",
       "    vcard:Given \"Sarah\"^^xsd:string ;\n",
@@ -303,28 +294,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+      "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
       "<rdf:RDF\n",
       "   xmlns:foaf=\"http://xmlns.com/foaf/0.1/\"\n",
       "   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
       "   xmlns:vcard=\"http://www.w3.org/2001/vcard-rdf/3.0#\"\n",
       ">\n",
+      "  <rdf:Description rdf:about=\"http://somewhere/JohnSmith\">\n",
+      "    <vcard:FN rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">John Smith</vcard:FN>\n",
+      "    <vcard:Given rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">John</vcard:Given>\n",
+      "    <vcard:Family rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">Smith</vcard:Family>\n",
+      "  </rdf:Description>\n",
       "  <rdf:Description rdf:about=\"http://somewhere/SarahJones\">\n",
       "    <vcard:FN rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">Sarah Jones</vcard:FN>\n",
       "    <vcard:Given rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">Sarah</vcard:Given>\n",
       "    <vcard:Family rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">Jones</vcard:Family>\n",
       "    <foaf:email rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">sJones@somewhere.com</foaf:email>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://somewhere/MattJones\">\n",
-      "    <vcard:FN rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">Matt Jones</vcard:FN>\n",
-      "    <vcard:Given rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">Matt</vcard:Given>\n",
-      "    <vcard:Family rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">Jones</vcard:Family>\n",
-      "    <foaf:knows rdf:resource=\"http://somewhere/JaneSmith\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://somewhere/JohnSmith\">\n",
-      "    <vcard:FN rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">John Smith</vcard:FN>\n",
-      "    <vcard:Given rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">John</vcard:Given>\n",
-      "    <vcard:Family rdf:datatype=\"http://www.w3.org/2001/XMLSchema#string\">Smith</vcard:Family>\n",
       "  </rdf:Description>\n",
       "</rdf:RDF>\n",
       "\n"
@@ -357,7 +342,7 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=Ncac33e4065db4a1a9d6ab4051394180f (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=Nd533b85ad4bc40cc8eefbf698aa325ff (<class 'rdflib.graph.Graph'>)>"
       ]
      },
      "execution_count": 11,
@@ -392,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
