--- a/Assignment4/course_materials/notebooks/Task03.ipynb
+++ b/Assignment4/course_materials/notebooks/Task03.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -38,17 +38,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rdflib in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (6.0.1)\r\n",
-      "Requirement already satisfied: setuptools in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (44.1.1)\r\n",
-      "Requirement already satisfied: isodate in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (0.6.0)\r\n",
-      "Requirement already satisfied: pyparsing in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (2.4.7)\r\n",
-      "Requirement already satisfied: six in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from isodate->rdflib) (1.16.0)\r\n"
+      "Requirement already satisfied: rdflib in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (6.2.0)\n",
+      "Requirement already satisfied: pyparsing in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (3.0.7)\n",
+      "Requirement already satisfied: isodate in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (0.6.1)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (57.4.0)\n",
+      "Requirement already satisfied: six in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from isodate->rdflib) (1.16.0)\n"
      ]
     }
    ],
    "source": [
     "!pip install rdflib\n",
-    "github_storage = \"https://raw.githubusercontent.com/FacultadInformatica-LinkedData/Curso2021-2022/master/Assignment4/course_materials\""
+    "github_storage = \"https://raw.githubusercontent.com/FacultadInformatica-LinkedData/Curso2022-2023/master/Assignment4/course_materials\""
    ]
   },
   {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -88,10 +88,10 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N9e1b9a99a74049f29358ec7bcbecff74 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N6d007d9c081e420491d826f694369b78 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -293,14 +293,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_24348/2638366893.py:1: UserWarning: Code: number is not defined in namespace XSD\n",
-      "  print(Literal(1, datatype=XSD.number).eq(Literal(\"1\", datatype=XSD.string)))\n",
-      "/tmp/ipykernel_24348/2638366893.py:2: UserWarning: Code: number is not defined in namespace XSD\n",
-      "  print(Literal(1, datatype=XSD.number).eq(Literal(1, datatype=XSD.string)))\n",
-      "/tmp/ipykernel_24348/2638366893.py:3: UserWarning: Code: number is not defined in namespace XSD\n",
-      "  print(Literal(1).eq(Literal(1, datatype=XSD.number)))\n",
-      "/tmp/ipykernel_24348/2638366893.py:4: UserWarning: Code: number is not defined in namespace XSD\n",
-      "  print(Literal(1, datatype=XSD.number).eq(Literal(1, datatype=XSD.number)))\n"
+      "C:\\Users\\34628\\AppData\\Local\\Temp\\ipykernel_10020\\2638366893.py:1: UserWarning: Code: number is not defined in namespace XSD\n",
+      "  print(Literal(1, datatype=XSD.number).eq(Literal(\"1\", datatype=XSD.string)))\n"
      ]
     }
    ],
@@ -325,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -375,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -401,6 +395,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "None\n",
+      "<generator object Graph.triples at 0x00000211B6E6E7A0>\n",
       "John\n",
       "Matt\n"
      ]
@@ -409,7 +405,11 @@
    "source": [
     "janeSmithURI = g.value(subject=None, predicate=VCARD.FN, object=Literal(\"Jane Smith\"))\n",
     "\n",
+    "print(janeSmithURI)\n",
+    "\n",
     "knows = g.triples((None, FOAF.knows, janeSmithURI))\n",
+    "\n",
+    "print(knows)\n",
     "\n",
     "for s,p,o in knows:\n",
     "  \n",
@@ -448,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
