--- a/Assignment4/course_materials/notebooks/Task07.ipynb
+++ b/Assignment4/course_materials/notebooks/Task07.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -29,18 +29,19 @@
      "user_tz": -120
     },
     "id": "Yl9npCt8n6m-",
-    "outputId": "096014c0-f1ad-4bd6-bada-ab3561ff1367"
+    "outputId": "096014c0-f1ad-4bd6-bada-ab3561ff1367",
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rdflib in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (6.0.1)\n",
-      "Requirement already satisfied: isodate in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (0.6.0)\n",
-      "Requirement already satisfied: setuptools in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (44.1.1)\n",
-      "Requirement already satisfied: pyparsing in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from rdflib) (2.4.7)\n",
-      "Requirement already satisfied: six in /home/dgarijo/Documents/GitHub/Curso2021-2022/env_3.9/lib/python3.9/site-packages (from isodate->rdflib) (1.16.0)\n"
+      "Requirement already satisfied: rdflib in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (6.2.0)\n",
+      "Requirement already satisfied: pyparsing in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (3.0.7)\n",
+      "Requirement already satisfied: isodate in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (0.6.1)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (57.4.0)\n",
+      "Requirement already satisfied: six in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from isodate->rdflib) (1.16.0)\n"
      ]
     }
    ],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -84,10 +85,10 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N743faa1dfcd04f438f1129d2ddcd40f6 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N7b20dd0ca7c24f65889833542be51460 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -134,11 +135,20 @@
    },
    "outputs": [],
    "source": [
-    "# TO DO\n",
+    "from rdflib.plugins.sparql import prepareQuery\n",
+    "\n",
+    "ns = Namespace(\"http://somewhere#\")\n",
+    "q1 = prepareQuery('''\n",
+    "  SELECT ?Subject WHERE { \n",
+    "    ?Subject rdfs:subclassOf ns:Person.\n",
+    "  }\n",
+    "  ''',\n",
+    "  initNs = { \"rdfs\": RDFS, \"ns\": ns}\n",
+    ")\n",
     "# Visualize the results\n",
     "\n",
-    "#for r in g.query(q1):\n",
-    "#  print(r)"
+    "for r in g.query(q1):\n",
+    "  print(r)"
    ]
   },
   {
@@ -147,7 +157,7 @@
     "id": "gM3DASkTQQ5Y"
    },
    "source": [
-    "**TASK 7.2: List all individuals of \"Person\" with RDFLib and SPARQL (remember the subClasses)**\n"
+    "**TASK 7.2: List all individuals of \"Person\" with RDFLib and SPARQL (remember the subClasses)**"
    ]
   },
   {
@@ -174,8 +184,17 @@
    },
    "outputs": [],
    "source": [
-    "# TO DO\n",
-    "# Visualize the results"
+    "q1 = prepareQuery('''\n",
+    "  SELECT ?Subject WHERE { \n",
+    "    ?Subject a ns:Person.\n",
+    "  }\n",
+    "  ''',\n",
+    "  initNs = {\"ns\": ns}\n",
+    ")\n",
+    "# Visualize the results\n",
+    "\n",
+    "for r in g.query(q1):\n",
+    "  print(r)"
    ]
   },
   {
@@ -184,7 +203,7 @@
     "id": "MXBqtBkJd22I"
    },
    "source": [
-    "**TASK 7.3: List all individuals of \"Person\" and all their properties including their class with RDFLib and SPARQL**\n"
+    "**TASK 7.3: List all individuals of \"Person\" and all their properties including their class with RDFLib and SPARQL**"
    ]
   },
   {
@@ -211,8 +230,18 @@
    },
    "outputs": [],
    "source": [
-    "# TO DO\n",
-    "# Visualize the results"
+    "q1 = prepareQuery('''\n",
+    "  SELECT ?Subject ?p ?Object WHERE { \n",
+    "    ?Subject a ns:Person.\n",
+    "    ?Subject ?p ?Object.\n",
+    "  }\n",
+    "  ''',\n",
+    "  initNs = {\"ns\": ns}\n",
+    ")\n",
+    "# Visualize the results\n",
+    "\n",
+    "for r in g.query(q1):\n",
+    "  print(r)"
    ]
   }
  ],
