--- a/Assignment4/course_materials/notebooks/Task07.ipynb
+++ b/Assignment4/course_materials/notebooks/Task07.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -182,14 +182,72 @@
     "id": "LiKSPHRzS-XJ",
     "outputId": "ebbe6519-7dc2-4581-b618-da596fda1799"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prepareQuery' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m q1 \u001b[38;5;241m=\u001b[39m \u001b[43mprepareQuery\u001b[49m(\u001b[38;5;124m'''\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124m  SELECT ?Subject WHERE \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m \u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124m    ?Subject a ns:Person.\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124m    OR\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124m    ?Subject a ?Class\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124m    ?Class rdfs:subclassOf ns:Person\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124m  }\u001b[39m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;124m  \u001b[39m\u001b[38;5;124m'''\u001b[39m,\n\u001b[0;32m      9\u001b[0m   initNs \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrdfs\u001b[39m\u001b[38;5;124m\"\u001b[39m: rdfs, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mns\u001b[39m\u001b[38;5;124m\"\u001b[39m: ns}\n\u001b[0;32m     10\u001b[0m )\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Visualize the results\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m g\u001b[38;5;241m.\u001b[39mquery(q1):\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'prepareQuery' is not defined"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py\", line 461, in dispatch_queue\n",
+      "    await self.process_one()\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py\", line 450, in process_one\n",
+      "    await dispatch(*args)\n",
+      "TypeError: object NoneType can't be used in 'await' expression\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\logging\\__init__.py\", line 1101, in emit\n",
+      "    stream.write(msg + self.terminator)\n",
+      "OSError: [Errno 22] Invalid argument\n",
+      "Call stack:\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\runpy.py\", line 196, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\runpy.py\", line 86, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel_launcher.py\", line 16, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\traitlets\\config\\application.py\", line 846, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelapp.py\", line 677, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tornado\\platform\\asyncio.py\", line 199, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\asyncio\\base_events.py\", line 595, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\asyncio\\base_events.py\", line 1881, in _run_once\n",
+      "    handle._run()\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\asyncio\\events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py\", line 463, in dispatch_queue\n",
+      "    self.log.exception(\"Error in message handler\")\n",
+      "Message: 'Error in message handler'\n",
+      "Arguments: ()\n"
+     ]
+    }
+   ],
    "source": [
     "q1 = prepareQuery('''\n",
     "  SELECT ?Subject WHERE { \n",
     "    ?Subject a ns:Person.\n",
+    "    OR\n",
+    "    ?Subject a ?Class\n",
+    "    ?Class rdfs:subclassOf ns:Person\n",
     "  }\n",
     "  ''',\n",
-    "  initNs = {\"ns\": ns}\n",
+    "  initNs = {\"rdfs\": RDFS, \"ns\": ns}\n",
     ")\n",
     "# Visualize the results\n",
     "\n",
