--- a/Assignment4/course_materials/notebooks/Task07.ipynb
+++ b/Assignment4/course_materials/notebooks/Task07.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -37,11 +37,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rdflib in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (6.2.0)\n",
-      "Requirement already satisfied: pyparsing in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (3.0.7)\n",
-      "Requirement already satisfied: isodate in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (0.6.1)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (57.4.0)\n",
-      "Requirement already satisfied: six in c:\\users\\34628\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from isodate->rdflib) (1.16.0)\n"
+      "Requirement already satisfied: rdflib in c:\\users\\fafer\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (6.2.0)\n",
+      "Requirement already satisfied: pyparsing in c:\\users\\fafer\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (3.0.9)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\fafer\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (58.1.0)\n",
+      "Requirement already satisfied: isodate in c:\\users\\fafer\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from rdflib) (0.6.1)\n",
+      "Requirement already satisfied: six in c:\\users\\fafer\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from isodate->rdflib) (1.16.0)\n",
+      "\n",
+      "[notice] A new release of pip available: 22.1.2 -> 22.2.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -85,10 +88,10 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N7b20dd0ca7c24f65889833542be51460 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=Nb325a336b09b4ecb871c3a11233b6a8b (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -133,14 +136,22 @@
     "id": "tRcSWuMHOXBl",
     "outputId": "b6bffa57-06fc-493c-e38d-14cc6f63bea9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.URIRef('http://somewhere#Researcher'),)\n"
+     ]
+    }
+   ],
    "source": [
     "from rdflib.plugins.sparql import prepareQuery\n",
     "\n",
     "ns = Namespace(\"http://somewhere#\")\n",
     "q1 = prepareQuery('''\n",
-    "  SELECT ?Subject WHERE { \n",
-    "    ?Subject rdfs:subclassOf ns:Person.\n",
+    "  SELECT ?subj WHERE { \n",
+    "    ?subj rdfs:subClassOf ns:Person.\n",
     "  }\n",
     "  ''',\n",
     "  initNs = { \"rdfs\": RDFS, \"ns\": ns}\n",
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -184,67 +195,22 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'prepareQuery' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m q1 \u001b[38;5;241m=\u001b[39m \u001b[43mprepareQuery\u001b[49m(\u001b[38;5;124m'''\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124m  SELECT ?Subject WHERE \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m \u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124m    ?Subject a ns:Person.\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124m    OR\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124m    ?Subject a ?Class\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124m    ?Class rdfs:subclassOf ns:Person\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124m  }\u001b[39m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;124m  \u001b[39m\u001b[38;5;124m'''\u001b[39m,\n\u001b[0;32m      9\u001b[0m   initNs \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrdfs\u001b[39m\u001b[38;5;124m\"\u001b[39m: rdfs, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mns\u001b[39m\u001b[38;5;124m\"\u001b[39m: ns}\n\u001b[0;32m     10\u001b[0m )\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Visualize the results\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m g\u001b[38;5;241m.\u001b[39mquery(q1):\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'prepareQuery' is not defined"
-     ]
-    },
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Logging error ---\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py\", line 461, in dispatch_queue\n",
-      "    await self.process_one()\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py\", line 450, in process_one\n",
-      "    await dispatch(*args)\n",
-      "TypeError: object NoneType can't be used in 'await' expression\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\logging\\__init__.py\", line 1101, in emit\n",
-      "    stream.write(msg + self.terminator)\n",
-      "OSError: [Errno 22] Invalid argument\n",
-      "Call stack:\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\runpy.py\", line 196, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\runpy.py\", line 86, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel_launcher.py\", line 16, in <module>\n",
-      "    app.launch_new_instance()\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\traitlets\\config\\application.py\", line 846, in launch_instance\n",
-      "    app.start()\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelapp.py\", line 677, in start\n",
-      "    self.io_loop.start()\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tornado\\platform\\asyncio.py\", line 199, in start\n",
-      "    self.asyncio_loop.run_forever()\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\asyncio\\base_events.py\", line 595, in run_forever\n",
-      "    self._run_once()\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\asyncio\\base_events.py\", line 1881, in _run_once\n",
-      "    handle._run()\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\asyncio\\events.py\", line 80, in _run\n",
-      "    self._context.run(self._callback, *self._args)\n",
-      "  File \"C:\\Users\\34628\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py\", line 463, in dispatch_queue\n",
-      "    self.log.exception(\"Error in message handler\")\n",
-      "Message: 'Error in message handler'\n",
-      "Arguments: ()\n"
+      "(rdflib.term.URIRef('http://somewhere#SaraJones'),)\n",
+      "(rdflib.term.URIRef('http://somewhere#JohnSmith'),)\n",
+      "(rdflib.term.URIRef('http://somewhere#JaneSmith'),)\n"
      ]
     }
    ],
    "source": [
     "q1 = prepareQuery('''\n",
-    "  SELECT ?Subject WHERE { \n",
-    "    ?Subject a ns:Person.\n",
-    "    OR\n",
-    "    ?Subject a ?Class\n",
-    "    ?Class rdfs:subclassOf ns:Person\n",
+    "  SELECT ?subj WHERE { \n",
+    "    {?subj a ns:Person.}\n",
+    "    UNION\n",
+    "    {?subj a ?class.\n",
+    "    ?class rdfs:subClassOf ns:Person}\n",
     "  }\n",
     "  ''',\n",
     "  initNs = {\"rdfs\": RDFS, \"ns\": ns}\n",
@@ -266,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -286,7 +252,22 @@
     "id": "APQGv3NHX8Tf",
     "outputId": "a06dc1f0-3dff-4fe4-e211-7ea6498011ef"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.URIRef('http://somewhere#SaraJones'), rdflib.term.URIRef('http://www.w3.org/1999/02/22-rdf-syntax-ns#type'), rdflib.term.URIRef('http://somewhere#Person'))\n",
+      "(rdflib.term.URIRef('http://somewhere#SaraJones'), rdflib.term.URIRef('http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Given'), rdflib.term.Literal('Sara', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#string')))\n",
+      "(rdflib.term.URIRef('http://somewhere#SaraJones'), rdflib.term.URIRef('http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/FN'), rdflib.term.Literal('Sara Jones', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#string')))\n",
+      "(rdflib.term.URIRef('http://somewhere#SaraJones'), rdflib.term.URIRef('http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Family'), rdflib.term.Literal('Jones', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#string')))\n",
+      "(rdflib.term.URIRef('http://somewhere#JohnSmith'), rdflib.term.URIRef('http://www.w3.org/1999/02/22-rdf-syntax-ns#type'), rdflib.term.URIRef('http://somewhere#Person'))\n",
+      "(rdflib.term.URIRef('http://somewhere#JohnSmith'), rdflib.term.URIRef('http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Given'), rdflib.term.Literal('John', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#string')))\n",
+      "(rdflib.term.URIRef('http://somewhere#JohnSmith'), rdflib.term.URIRef('http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/FN'), rdflib.term.Literal('John Smith', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#string')))\n",
+      "(rdflib.term.URIRef('http://somewhere#JohnSmith'), rdflib.term.URIRef('http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Family'), rdflib.term.Literal('Smith', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#string')))\n"
+     ]
+    }
+   ],
    "source": [
     "q1 = prepareQuery('''\n",
     "  SELECT ?Subject ?p ?Object WHERE { \n",
@@ -324,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
