Task06/07.ipynb modified, completed and finished

--- a/Assignment4/course_materials/notebooks/Task07.ipynb
+++ b/Assignment4/course_materials/notebooks/Task07.ipynb
@@ -98,21 +98,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 79,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tRcSWuMHOXBl",
-        "outputId": "9bd4a57f-0a29-4d76-ff3f-84cb58569fa1"
+        "outputId": "d3f986b1-d555-4655-c8d7-c1e74a91e284"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "http://somewhere#Researcher\n",
-            "http://somewhere#PhDstudent\n"
+            "http://somewhere#Researcher\n"
           ]
         }
       ],
@@ -122,7 +121,7 @@
         "q1 = prepareQuery('''\n",
         "  SELECT ?Sub\n",
         "    WHERE{\n",
-        "      ?Sub rdfs:subClassOf ?Person\n",
+        "      ?Sub rdfs:subClassOf <http://somewhere#Person>\n",
         "    }\n",
         "    '''\n",
         "      )\n",
@@ -141,34 +140,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 83,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LiKSPHRzS-XJ",
-        "outputId": "1de6400b-164d-49ba-a0cd-9b438d8ef053"
+        "outputId": "aebbee81-e45f-43c9-d203-2e7f9461297b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "http://somewhere#Researcher http://somewhere#Person\n",
-            "http://somewhere#PhDstudent http://somewhere#Researcher\n"
+            "http://somewhere#Researcher http://somewhere#SaraJones\n",
+            "http://somewhere#Researcher http://somewhere#JohnSmith\n"
           ]
         }
       ],
       "source": [
-        "\n",
-        "q1 = prepareQuery('''\n",
+        "q2 = prepareQuery('''\n",
         "  SELECT ?Sub ?Person\n",
         "    WHERE{\n",
-        "      ?Sub rdfs:subClassOf ?Person\n",
+        "      ?Sub rdfs:subClassOf <http://somewhere#Person> .\n",
+        "      ?Person rdf:type <http://somewhere#Person> .\n",
         "      }\n",
         "      '''\n",
         "      )\n",
-        "for r in g.query(q1):\n",
+        "for r in g.query(q2):\n",
         "  print(r.Sub, r.Person)"
       ]
     },
@@ -183,44 +182,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 77,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "APQGv3NHX8Tf",
-        "outputId": "9391012c-0c06-41f8-c76c-403f9aa079b2"
+        "outputId": "fd5148b3-44d5-4f6e-e11b-3594aeb7dd95"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/FN http://www.w3.org/2000/01/rdf-schema#Datatype\n",
-            "http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Given http://www.w3.org/2000/01/rdf-schema#Datatype\n",
-            "http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Family http://www.w3.org/2000/01/rdf-schema#Property\n",
-            "http://somewhere#Person http://www.w3.org/2000/01/rdf-schema#Class\n",
-            "http://somewhere#Researcher http://www.w3.org/2000/01/rdf-schema#Class\n",
-            "http://somewhere#PhDstudent http://www.w3.org/2000/01/rdf-schema#Class\n",
-            "http://somewhere#University http://www.w3.org/2000/01/rdf-schema#Class\n",
+            "http://somewhere#SaraJones http://somewhere#JaneSmith\n",
+            "http://somewhere#SaraJones http://somewhere#SaraJones\n",
+            "http://somewhere#SaraJones http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/FN\n",
+            "http://somewhere#SaraJones http://somewhere#JohnSmith\n",
+            "http://somewhere#SaraJones http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/FN\n",
+            "http://somewhere#SaraJones http://somewhere#UPM\n",
+            "http://somewhere#SaraJones http://somewhere#Researcher\n",
+            "http://somewhere#SaraJones http://somewhere#SaraJones\n",
+            "http://somewhere#SaraJones http://somewhere#JohnSmith\n",
+            "http://somewhere#SaraJones http://somewhere#JohnSmith\n",
+            "http://somewhere#SaraJones http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Given\n",
+            "http://somewhere#SaraJones http://somewhere#PhDstudent\n",
+            "http://somewhere#SaraJones http://somewhere#SaraJones\n",
+            "http://somewhere#SaraJones http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Family\n",
+            "http://somewhere#SaraJones http://somewhere#University\n",
+            "http://somewhere#SaraJones http://somewhere#JohnSmith\n",
             "http://somewhere#SaraJones http://somewhere#Person\n",
+            "http://somewhere#SaraJones http://somewhere#Researcher\n",
+            "http://somewhere#SaraJones http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Given\n",
+            "http://somewhere#SaraJones http://somewhere#SaraJones\n",
+            "http://somewhere#SaraJones http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Family\n",
+            "http://somewhere#SaraJones http://somewhere#JaneSmith\n",
+            "http://somewhere#SaraJones http://somewhere#JaneSmith\n",
+            "http://somewhere#SaraJones http://somewhere#JaneSmith\n",
+            "http://somewhere#SaraJones http://somewhere#PhDstudent\n",
+            "http://somewhere#JohnSmith http://somewhere#JaneSmith\n",
+            "http://somewhere#JohnSmith http://somewhere#SaraJones\n",
+            "http://somewhere#JohnSmith http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/FN\n",
+            "http://somewhere#JohnSmith http://somewhere#JohnSmith\n",
+            "http://somewhere#JohnSmith http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/FN\n",
+            "http://somewhere#JohnSmith http://somewhere#UPM\n",
+            "http://somewhere#JohnSmith http://somewhere#Researcher\n",
+            "http://somewhere#JohnSmith http://somewhere#SaraJones\n",
+            "http://somewhere#JohnSmith http://somewhere#JohnSmith\n",
+            "http://somewhere#JohnSmith http://somewhere#JohnSmith\n",
+            "http://somewhere#JohnSmith http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Given\n",
+            "http://somewhere#JohnSmith http://somewhere#PhDstudent\n",
+            "http://somewhere#JohnSmith http://somewhere#SaraJones\n",
+            "http://somewhere#JohnSmith http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Family\n",
+            "http://somewhere#JohnSmith http://somewhere#University\n",
+            "http://somewhere#JohnSmith http://somewhere#JohnSmith\n",
             "http://somewhere#JohnSmith http://somewhere#Person\n",
-            "http://somewhere#JaneSmith http://somewhere#Researcher\n",
-            "http://somewhere#UPM http://somewhere#University\n"
+            "http://somewhere#JohnSmith http://somewhere#Researcher\n",
+            "http://somewhere#JohnSmith http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Given\n",
+            "http://somewhere#JohnSmith http://somewhere#SaraJones\n",
+            "http://somewhere#JohnSmith http://somewhere#http://www.w3.org/2001/vcard-rdf/3.0/Family\n",
+            "http://somewhere#JohnSmith http://somewhere#JaneSmith\n",
+            "http://somewhere#JohnSmith http://somewhere#JaneSmith\n",
+            "http://somewhere#JohnSmith http://somewhere#JaneSmith\n",
+            "http://somewhere#JohnSmith http://somewhere#PhDstudent\n"
           ]
         }
       ],
       "source": [
         "\n",
-        "q1 = prepareQuery('''\n",
-        "  SELECT ?sub ?Person\n",
+        "q3 = prepareQuery('''\n",
+        "  SELECT ?Sub ?Person ?prop\n",
         "    WHERE{\n",
-        "      ?sub rdf:type ?Person\n",
+        "      ?Sub rdf:type <http://somewhere#Person> .\n",
+        "      ?Person ?porp ?z .\n",
         "      }\n",
         "      '''\n",
         "      )\n",
-        "for r in g.query(q1):\n",
-        "  print(r.sub, r.Person)"
+        "for r in g.query(q3):\n",
+        "  print(r.Sub, r.Person)"
       ]
     }
   ],
